# AppImageUpdate

./: .release-plz.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml  release-plz.yml  release.yml
ci/: Dockerfile  build-appimages.sh  build-in-docker.sh
src/: appimage.rs  config.rs  error.rs  lib.rs  main.rs  self_update.rs  updater.rs  util.rs
src/update_info/: forge.rs  generic.rs  github.rs  mod.rs  parser.rs
src/updateinformation/: GithubReleasesZsyncUpdateInformation.cpp
src/updater/: updater.cpp
