[package]
name = "appimageupdate"
version = "0.3.1"
edition = "2024"
description = "Fast, bandwidth-efficient AppImage updater using zsync"
readme = "README.md"
repository = "https://github.com/pkgforge-dev/appimageupdate"
license = "MIT"
keywords = ["appimage", "zsync"]
rust-version = "1.93.1"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
dirs = "6.0.0"
releasekit = { version = "0.1.0", features = ["ureq"] }
hex = "0.4.3"
indicatif = "0.18.4"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
shellexpand = "3.1.2"
thiserror = "2.0.18"
toml = "1.0.7"
zsync-rs = "0.1.2"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
